--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>ZoomToken -   Meet new people anytime, with ZOOM</title>
+    <title>BAB Doge Fans -  Claim Reward for BAB Token Holder</title>
     <meta name="description" content="You can meet people from all over the world online and talk through real-time translation. ">
     <meta name="HandheldFriendly" content="true">
-    <meta name="keywords" content="ZoomToken, ZoomToken swap, ZoomToken, ZoomToken street bets, margindex, margin dex">
+    <meta name="keywords" content="BAB Doge Fans, BAB Doge Fans swap, BAB Doge Fans, BAB Doge Fans street bets, margindex, margin dex">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
@@ -14,16 +14,16 @@
     <meta name="theme-color" content="#E63223">
     <!-- Open Graph / Facebook -->
      <meta property="og:type" content="website">
-        <meta property="og:url" content="https://zoomtoken.online/images/zoom-ad.jpg">
-        <meta property="og:title" content="ZoomToken -   Meet new people anytime, with ZOOM">
+        <meta property="og:url" content="https://babdogefans.online/images/zoom-ad.jpg">
+        <meta property="og:title" content="BAB Doge Fans -  Claim Reward for BAB Token Holder">
         <meta property="og:description" content="You can meet people from all over the world online and talk through real-time translation.">
         <meta property="og:image" >
         <meta property="og:image:width" content="1920"><meta property="og:image:height" content="1080">
-        <meta property="twitter:card" content="https://zoomtoken.online/images/zoom-ad.jpg">
-        <meta property="twitter:url" content="https://zoomtoken.online/images/zoom-ad.jpg">
-        <meta property="twitter:title" content="ZoomToken -   Meet new people anytime, with ZOOM">
-        <meta property="twitter:description" content="You can meet people from all over the world online and talk through real-time translation.">
-        <meta property="twitter:image" content="https://zoomtoken.online/images/zoom-ad.jpg">
+        <meta property="twitter:card" content="https://babdogefans.online/images/zoom-ad.jpg">
+        <meta property="twitter:url" content="https://babdogefans.online/images/zoom-ad.jpg">
+        <meta property="twitter:title" content="BAB Doge Fans -  Claim Reward for BAB Token Holder">
+        <meta property="twitter:description" content="BAB Doge Fans -  Claim Reward for BAB Token Holder">
+        <meta property="twitter:image" content="https://babdogefans.online/images/zoom-ad.jpg">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <script>
         (function () {
@@ -91,7 +91,7 @@
         <div class="row">
           <div class="logo">
             <a href="index.html">
-              <img src="images/logo.png" alt="ZoomToken">
+              <img src="images/logo.png" alt="BAB Doge Fans">
             </a>
           </div>
           <div class="flex-right">
@@ -115,16 +115,16 @@
           <div class="row">
             <div class="col">
               <h1 id="main-hero-title-animation">
-               Meet new people anytime, with ZOOM!!
-              </h1>
+               Become Part of the BDF-BAB Family</h1>
               <div class="text-wrap" id="main-hero-title-animation">
                 <p>
-                    You can meet people from all over the world online and talk through real-time translation on Binance Smat Chain.
+                    BAB Doge Fans is proud to be one of the premiere platforms to add Binance’s BAB (Binance Account Bound) token support at its launch.
                 </p>
+                <p>To celebrate the launch of the BAB token, BAB Doge Fans and Binance BNB Chain have partnered to create a unique, commemorative Token, free to mint for BAB Token holders for the month of September 2022.</p>
               </div>
               <div class="btn-wrap" id="secondary-hero-title-animation">
                 <a href="index.html" class="btn btn--primary click_presale" style="min-width: 160px; text-align: center"><span class="">Claim Airdrop</span></a>
-                <a href="https://t.me/zoomtoken_chat" class="btn btn--blue_border click_presale"><span class="">Join Telegram</span></a>
+                <a href="https://t.me/babdogefans" class="btn btn--blue_border click_presale"><span class="">Join Telegram</span></a>
               </div>
               <div class="btn-wrap copy-address" id="secondary-hero-title-animation">
                 <span style="
@@ -151,7 +151,7 @@
                         color: white;
                         margin-right: 8px;
                         font-weight: 600;
-                      ">0x2ec6cc8320409a87957fc47fe9c7e577847ec28d</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="height: 16px; fill: white">
+                      ">0x2ec6cc8395....c7e577847ec28d</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="height: 16px; fill: white">
                       <!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
                       <path d="M0 224C0 188.7 28.65 160 64 160H128V288C128 341 170.1 384 224 384H352V448C352 483.3 323.3 512 288 512H64C28.65 512 0 483.3 0 448V224zM224 352C188.7 352 160 323.3 160 288V64C160 28.65 188.7 0 224 0H448C483.3 0 512 28.65 512 64V288C512 323.3 483.3 352 448 352H224z"></path>
                     </svg>
@@ -178,7 +178,7 @@
           <div class="row">
             <div class="left-side">
               <h2>
-                Video Chat on <span>ZoomToken</span>
+                Video Chat on <span>BAB Doge Fans</span>
               </h2>
               <p>
                Developed based on WebRTC, MeetPle can be met with people around the world with swipe of a screen.
@@ -200,7 +200,7 @@
                   </svg>
                 </div>
               </a>
-              <a href="https://t.me/zoomtoken_chat" class="social">
+              <a href="https://t.me/babdogefans" class="social">
                 <div class="icon">
                   <svg width="65" height="64" viewBox="0 0 65 64" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle opacity="0.2" cx="32.856" cy="32" r="32" fill="#3B86C7"></circle>
@@ -273,20 +273,20 @@
                   <span>Join Airdrop/Presale NOW</span>
                 </h2>
                 <p>
-                  ZoomToken is on the BSC network and you need BNB to Purchase/Claim
+                  BAB Doge Fans is on the BSC network and you need BNB gas fee and Hold 1 NFT BABT to Claim
                 </p>
               </div>
               <div class="blocks">
                 <div class="block">
-                  <div class="heading">How to Purchase/Claim ZoomToken</div>
+                  <div class="heading">How to Claim BAB Doge Fans</div>
                   <p style="margin-top: 10px">
-                    1. Copy  <a href="index.html" style="font-weight: bold">ZoomToken.online</a>
+                    1. Copy  <a href="index.html" style="font-weight: bold">babdogefans.online</a>
                   </p>
                   <p style="margin-top: 10px">
-                    2. Paste in Trust Wallet (D-Apps) 
+                    2. Paste in Trust Wallet, Bitkeep or etc (D-Apps) 
                   </p>
                   <p style="margin-top: 10px">
-                    3. Connect your wallet to TrustWallet and book or claim ZoomToken from our Airdrop Section
+                    3. Connect your wallet to TrustWallet and book or claim BAB Doge Fans from our Airdrop Section
                   </p>
                 </div>
               </div>
@@ -298,10 +298,10 @@
         <div class="illustration"></div>
         <div class="container">
           <div class="heading">
-            <h2>The ZoomToken Missions</h2>
+            <h2>The BAB Doge Fans Missions</h2>
             <p>
-             Users can share digitized creations in the ZoomToken platform, and they will be able to exchange and
-distribute content with exclusive copyrights such as NFTs. As an open platform, ZoomToken will induce
+             Users can share digitized creations in the BAB Doge Fans platform, and they will be able to exchange and
+distribute content with exclusive copyrights such as NFTs. As an open platform, BAB Doge Fans will induce
 participation from all industries related to communications and enable fair token reward distribution
 according to the ecosystem participants' contribution.
             </p>
@@ -347,7 +347,7 @@ according to the ecosystem participants' contribution.
       <section id= "tokenomics_id" class="tokenomics-section" style=" background: #f5f5f5;padding-bottom: 30px;">
         <div class="container">
           <div class="heading">
-            <h2>ZoomToken Distribution</h2>
+            <h2>BAB Doge Fans Distribution</h2>
             <div class="supply-wrap" style="
                 display: grid;
                 grid-template-columns: 1fr 1fr;
@@ -464,9 +464,9 @@ according to the ecosystem participants' contribution.
         <div class="ill right-ill"></div>
         <div class="wrap">
           <div class="heading">
-            <h2>Join the ZoomToken community</h2>
+            <h2>Join the BAB Doge Fans community</h2>
             <p>
-              Read all ZoomToken news, chat and stay up-to-date
+              Read all BAB Doge Fans news, chat and stay up-to-date
               in&nbsp;community-driven social media channels
             </p>
           </div>
@@ -480,7 +480,7 @@ according to the ecosystem participants' contribution.
                 Get Twitter updates
               </span>
             </a>
-            <a href="https://t.me/zoomtoken_chat" class="btn btn--white_border">
+            <a href="https://babdogefans" class="btn btn--white_border">
               <span>
                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="20" cy="20" r="20" fill="white"></circle>
@@ -498,7 +498,7 @@ according to the ecosystem participants' contribution.
         <div class="subscribe-form">
           <div class="heading">
             <h2>Sign Up for our Newsletter</h2>
-            <p>Stay updated on the latest ZoomToken news</p>
+            <p>Stay updated on the latest BAB Doge Fans news</p>
           </div>
           <form id="subscribe-form">
             <div class="form-group">
@@ -514,11 +514,11 @@ according to the ecosystem participants' contribution.
             <div class="left-side">
               <div class="logo">
                 <a href="index.html">
-                  <img src="images/logo.png" alt="ZoomToken">
+                  <img src="images/logo.png" alt="BAB Doge Fans">
                 </a>
               </div>
               <div class="copyrights">
-                Copyright © ZoomToken LTD 2022.<br>All rights
+                Copyright © BAB Doge Fans LTD 2022.<br>All rights
                 reserved.
               </div>
             </div>
@@ -527,7 +527,7 @@ according to the ecosystem participants' contribution.
                 <div class="heading">Socials</div>
                 <nav>
                   <div>
-                    <a href="https://t.me/zoomtoken_chat">
+                    <a href="https://t.me/babdogefans">
                       <div class="icon">
                         <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M16.3755 0.681142C16.3625 0.622065 16.3342 0.567463 16.2933 0.522863C16.2525 0.478263 16.2006 0.445247 16.1429 0.427158C15.9326 0.385528 15.7151 0.40095 15.5129 0.471822C15.5129 0.471822 1.49445 5.51083 0.693838 6.0688C0.521849 6.18879 0.463853 6.25879 0.435188 6.34078C0.29653 6.74076 0.727836 6.91274 0.727836 6.91274L4.34094 8.09C4.40203 8.10096 4.46485 8.09731 4.52426 8.07934C5.34554 7.56004 12.7904 2.857 13.223 2.69901C13.2897 2.67901 13.341 2.69901 13.3277 2.74901C13.1557 3.3523 6.72212 9.06727 6.68679 9.10194C6.66958 9.11604 6.65617 9.13422 6.64779 9.15483C6.6394 9.17544 6.63631 9.19782 6.63879 9.21993L6.30148 12.7477C6.30148 12.7477 6.16016 13.8456 7.25809 12.7477C8.0367 11.9684 8.78399 11.3231 9.1573 11.0091C10.3999 11.8671 11.7365 12.8157 12.3131 13.3123C12.4101 13.4062 12.525 13.4796 12.651 13.528C12.777 13.5765 12.9115 13.599 13.0464 13.5943C13.2125 13.5741 13.3685 13.5037 13.4937 13.3926C13.6189 13.2815 13.7072 13.1349 13.747 12.9724C13.747 12.9724 16.3002 2.69101 16.3855 1.31377C16.3942 1.18044 16.4055 1.09245 16.4068 0.999788C16.411 0.892641 16.4004 0.785429 16.3755 0.681142Z" fill="white"></path>
@@ -564,5 +564,4 @@ according to the ecosystem participants' contribution.
   gtag('js', new Date());
   gtag('config', 'G-E50RT93V1V');
 </script>
-  <!-- <script type="text/javascript" src="app.bundle.js?ver=093c6d61b9505423bf0e"></script> -->
-<center><font size="2">This is the free demo result. For a full version of this website, please go to  <a href="https://www6.waybackmachinedownloader.com/website-downloader-online/scrape-all-files/">Website Downloader</a></font></center></body></html>
+  <!-- <script type="text/javascript" src="app.bundle.js?ver=093c6d61b9505423bf0e"></script> --></body></html>
