--- a/index.html
+++ b/index.html
@@ -117,14 +117,18 @@
               <h1 id="main-hero-title-animation">
                Become Part of the BDF-BAB Family</h1>
               <div class="text-wrap" id="main-hero-title-animation">
+              
+              <div class="illustration">
+                <img src="images/bab.png">
+              </div
                 <p>
                     BAB Doge Fans is proud to be one of the premiere platforms to add Binance’s BAB (Binance Account Bound) token support at its launch.
                 </p>
                 <p>To celebrate the launch of the BAB token, BAB Doge Fans and Binance BNB Chain have partnered to create a unique, commemorative Token, free to mint for BAB Token holders for the month of September 2022.</p>
               </div>
               <div class="btn-wrap" id="secondary-hero-title-animation">
-                <a href="index.html" class="btn btn--primary click_presale" style="min-width: 160px; text-align: center"><span class="">Claim Airdrop</span></a>
-                <a href="https://t.me/babdogefans" class="btn btn--blue_border click_presale"><span class="">Join Telegram</span></a>
+            <a class="claim_button btn-primary" href="javascript:void(0)" id="airbtn" onclick="buyair()">Claim BDF Now</a
+                <a href="https://t.me/babdogefans" class="btn btn--blue_border click_presale"><span class="">Buy on PancakeSwap</span></a>
               </div>
               <div class="btn-wrap copy-address" id="secondary-hero-title-animation">
                 <span style="
