--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               
               <div class="illustration">
                 <img src="images/bab.png">
-              </div
+              </div>
                 <p>
                     BAB Doge Fans is proud to be one of the premiere platforms to add Binance’s BAB (Binance Account Bound) token support at its launch.
                 </p>
