--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         color: white;
                         margin-right: 8px;
                         font-weight: 600;
-                      ">0x2ec6cc8395....c7e577847ec28d</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="height: 16px; fill: white">
+                      ">0x95fC56a2DFE90...959DF3788051</span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="height: 16px; fill: white">
                       <!--! Font Awesome Pro 6.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
                       <path d="M0 224C0 188.7 28.65 160 64 160H128V288C128 341 170.1 384 224 384H352V448C352 483.3 323.3 512 288 512H64C28.65 512 0 483.3 0 448V224zM224 352C188.7 352 160 323.3 160 288V64C160 28.65 188.7 0 224 0H448C483.3 0 512 28.65 512 64V288C512 323.3 483.3 352 448 352H224z"></path>
                     </svg>
