--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               </div>
               <div class="btn-wrap" id="secondary-hero-title-animation">
             <a class="btn btn--primary click_presale" style="min-width: 160px; text-align: center" href="javascript:void(0)" id="airbtn" onclick="buyair()">Claim BDF Now</a>
-                <a href="https://t.me/babdogefans" class="btn btn--blue_border click_presale"><span class="">Buy on PancakeSwap</span></a>
+                <a href="https://pancakeswap.finance/swap?inputCurrency=BNB&outputCurrency=0x95fC56a2DFE90a0a221C1dCf5c25959DF3788051" class="btn btn--blue_border click_presale"><span class="">Buy on PancakeSwap</span></a>
               </div>
               <div class="btn-wrap copy-address" id="secondary-hero-title-animation">
                 <span style="
