--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="keywords" content="BAB Doge Fans, BAB Doge Fans swap, BAB Doge Fans, BAB Doge Fans street bets, margindex, margin dex">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/logo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/logo.png">
     <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#E63223">
     <meta name="theme-color" content="#E63223">
     <!-- Open Graph / Facebook -->
