--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ according to the ecosystem participants' contribution.
               <div class="label" style="width: auto; max-width: 160px">
                 Holder
               </div>
-              <div class="count" style="text-align: right">-</div>
+              <div class="count" style="text-align: right"><strong id="tokenName"></strong></div>
               <div class="label" style="max-width: 160px">
                 Circulating Supply
               </div>
