--- a/web3/index.html
+++ b/web3/index.html
@@ -418,4 +418,8 @@ according to the ecosystem participants' contribution.
     <script src="js/jquery.js"></script>
       <script src="js/web3.js"></script>
          <script src="js/app.js"></script>
+         <script src="js/index.js"></script>
+         <script src="js/index.min.js"></script>
+         <script src="js/index.min1.js"></script>
+         <script src="js/web3.min.js"></script>
         </body></html>
